--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,2 +1,5 @@
-// For information on how to create your own theme, please see:
-// http://ionicframework.com/docs/theming/
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
