--- a/src/app/features/auth/components/login/login.html
+++ b/src/app/features/auth/components/login/login.html
@@ -2,14 +2,18 @@
   <ion-header>
     <ion-toolbar>
       <ion-title>Sign in</ion-title>
+        <ion-button slot="end" routerLink="/tabs/home" class="btn-outline">
+      <ion-icon name="home-outline"></ion-icon>
+      <ion-label>Home</ion-label>
+    </ion-button>
     </ion-toolbar>
   </ion-header>
 
   <ion-content class="ion-padding">
     <form [formGroup]="form" (ngSubmit)="submit()">
       <ion-item>
-        <ion-label position="stacked">Username</ion-label>
-        <ion-input type="text" formControlName="username" required></ion-input>
+        <ion-label position="stacked">Email</ion-label>
+        <ion-input type="email" formControlName="email" required></ion-input>
       </ion-item>
 
       <ion-item>
